syntax="proto3";

package user;

option go_package = "./pkg/pb";


service UserService{

  rpc UserSignup (UserSignupRequest)returns(UserSignupResponse){}
  rpc UserLoginHandler (UserLoginRequest)returns(UserLoginResponse){}
  rpc GetUserDetails(GetUserDetailsRequest)returns(GetUserDetailsResponse){}
  rpc AdminLogin (AdminLoginRequest)returns(AdminLoginResponse){}

}
message SignupModel{
  string 	name            = 1;
  string	email           = 2;
  string 	phone           = 3;
  string 	password        = 4; 
  string 	confirmPassword = 5;
} 

message AdminLoginRequest{
  string	email          = 1;
  string 	password       = 2; 
} 
message AdminDetailsResponse{
  int64      	ID     = 1;
  string   	Name   = 2; 
  string  	Email  = 3; 
}

message AdminLoginResponse{

  AdminDetailsResponse adminResponseData = 1;
  int64 httpstatus                       = 2;
  string AccessToken                     = 3;
  string Message                         = 4;

} 

message UserSignupRequest{

  SignupModel userModel =1;
  string  referallCode  =2;
}


message UserSignupResponseModel{

  int64 UserID      = 1; 
  string Name       = 2; 
  string 	Email     = 3; 
  string Phone      = 4; 
  string ReferralID = 5; 
}


message UserSignupResponse{
  UserSignupResponseModel  responseData = 1;
  int64 Httpstatus                      = 2;
  string AccessToken                    = 3;
  string RefreshToken                   = 4;
  string Message                         = 5;

}

message UserLoginRequest {
  string	email         =  1;
  string 	password      =  2; 

}

message UserLoginResponse {
  int64	Id               = 1; 
  string Name            = 2; 
  string 	Email          = 3; 
  string Phone           = 4; 
  string ReferralID      = 5; 
  int64 Httpstatus      = 6;
  string AccessToken     = 7;
  string RefreshToken    = 8;
  string Message                        = 9;

}

message GetUserDetailsRequest {
  int64 userId = 1; 
}

message GetUserDetailsModel {
  int64	Id         =  1; 
  string Name      =  2; 
  string 	Email    =  3; 
  string Phone     =  4; 
  bool Blocked     =  5;
}




message GetUserDetailsResponse {

  GetUserDetailsModel resData           = 1;
  int64 Httpstatus                      = 2;
  string Message                        = 3;

}

